samples/_failures_safe/1761652428_9eed94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd4bd095.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fd4bd095.c:173:30: error: expected ‘)’ at end of input
  173 |     while (input[pos] != '\0'
      |           ~                  ^
      |                              )
./samples/SAFE/__tmp_fd4bd095.c:173:5: error: expected declaration or statement at end of input
  173 |     while (input[pos] != '\0'
      |     ^~~~~
